[3.0.8]
        * [ADDED]: Introduced "loadByDefault" property for plugin descriptor files.
        * [ADDED]: #3056 #3063 Implemented index column ordering in index dialog.
        * [CHANGE]: DbAndroid plugin has now JAR file embedded and you can get it from Tools menu.
        * [BUGFIX]: Not loading Android plugin by default (needs manual load from configuration dialog), which stops the "ADB" error for people not using the plugin.
        * [BUGFIX]: Fixed importing from CSV with some of lines containing less fields than defined in header (or in first data row).
        * [BUGFIX]: #2989 Fixed multiline value handling in CSV import plugin.
        * [BUGFIX]: #2921 Fixed empty values as NULL handling in CSV import plugin.
        * [BUGFIX]: #3034 Fixed handling empty string as value for DEFAULT constraint.
        * [BUGFIX]: #3064 Fixed locking database executions when counting rows in huge tables.
        * [BUGFIX]: DbAndroid plugin has fix for null pointer in the JAR when client has disconnected
        * [BUGFIX]: Error message details were missing in some cases (when smart execution method failed at parsing stage). This is fixed now.
        * [BUGFIX]: #3026 #3027 #3043 Fixed RAISE() function formatting in enterprise formatter (used to produce invalid SQL).
        * [BUGFIX]: #3015 Fixed error with DEFAULT constraint containing datetime('now', 'localtime').
        * [BUGFIX]: #3000 Fixed compilation errors for Qt >= 5.5.
        * [BUGFIX]: #2956 Fixed unexpected data refresh when clicking in the right side of value filter field in table window.
        * [BUGFIX]: #2991 #2928 #2929 #2941 #2960 Fixed executing "garbage" query, causing application crash.
        * [BUGFIX]: #2920 Fixed removing several databases.
        * [BUGFIX]: #3068 #3066 Fixed database removal confirmation dialog so the message asks about removing it from the list, not deleting it.