@@ -1,6 +1,7 @@
 [3.0.8]
         * [ADDED]: Introduced "loadByDefault" property for plugin descriptor files.
         * [ADDED]: #3056 #3063 Implemented index column ordering in index dialog.
+        * [ADDED]: #2975 Information message after successful table/view change.
         * [CHANGE]: DbAndroid plugin has now JAR file embedded and you can get it from Tools menu.
         * [BUGFIX]: Not loading Android plugin by default (needs manual load from configuration dialog), which stops the "ADB" error for people not using the plugin.
         * [BUGFIX]: Fixed importing from CSV with some of lines containing less fields than defined in header (or in first data row).
@@ -18,7 +19,7 @@
         * [BUGFIX]: #2920 Fixed removing several databases.
         * [BUGFIX]: #3068 #3066 Fixed database removal confirmation dialog so the message asks about removing it from the list, not deleting it.
         * [BUGFIX]: #3073 Fixed crash when unloading plugin with its own configuration subpage and saving config dialog.
-        * [BUGFIX]: #2931 Fixed incorrect results when executing 2-level queries with an expression and an alias combination as a result column definition.
+        * [BUGFIX]: #2931 #2962 Fixed incorrect results when executing 2-level queries with an expression and an alias combination as a result column definition.
         * [BUGFIX]: #2942 Fixed deleting multiple tables/indexes/... when selected them and picked "Delete table/index/..." from context menu.
         * [BUGFIX]: #2945 Fixed manual reordering of database objects with Drag&Drop.
         * [BUGFIX]: #2954 #2803 #2937 Fixed incorrect recreation of foreign keys chain.
